Pequeñas mejoras al código y actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -474,6 +474,7 @@
     "document-type": "Tipus document",
     "document-type-valid-length": "Tipus de document no vàlid. Ha de tenir entre 1 i 20 caràcters.",
     "document-wildcard-info": "Document indicat al capdavant de l'entrada comptable",
+    "document-without-total": "Document %document% sense totals o amb el total a 0.",
     "documentation": "Documentació",
     "documents": "Documents",
     "documents-generated": "Documents generats",
