--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -474,6 +474,7 @@
     "document-type": "Document type",
     "document-type-valid-length": "Invalid document type. Must be between 1 and 20 characters.",
     "document-wildcard-info": "Document indicated in the head of the accounting entry",
+    "document-without-total": "Document %document% without totals or with total at 0.",
     "documentation": "Documentation",
     "documents": "Documents",
     "documents-generated": "Documents generated",
@@ -1171,7 +1172,7 @@
     "previous": "Previous",
     "previous-balance": "Previous Balance",
     "previous-documents": "Previous documents",
-    "previous-quarter": "Trimestre anterior",
+    "previous-quarter": "Previous quarter",
     "previously-purchased-from-supplier": "Previously purchased from supplier",
     "previously-sold-to-customer": "Previously purchased to customer",
     "price": "Price",
@@ -1243,7 +1244,7 @@
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "Rectified invoice",
     "rectified-invoice-p": "Invoices are commercial documents and have a number of legal restrictions. They cannot be deleted or modified, only total or partial returns are allowed. Use this form to make a return of this invoice.",
-    "rectified-invoices": "Facturas rectificativas",
+    "rectified-invoices": "Rectified Invoices",
     "rectifying": "Rectification",
     "rectifying-serie": "Rectifying serie",
     "redirect": "Redirect",
@@ -1269,7 +1270,7 @@
     "reloading": "Reloading...",
     "remove-filter": "Remove filter",
     "remove-from-list": "Remove",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Removing logs until %date%",
     "renew": "Renew",
     "renumber": "Renumber",
     "renumber-accounting": "Renumber Accounting",
@@ -1377,7 +1378,7 @@
     "show-pending-remittances": "Show pending remittances",
     "show-price": "Show price on print",
     "show-quantity": "Show quantity on print",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Show create section",
     "signature": "Signature",
     "simple": "Simple",
     "simplified": "Simplified",
@@ -1389,7 +1390,7 @@
     "soap-extension-not-installed": "The SOAP extension is not enabled in PHP. Contact your hosting provider to activate it.",
     "social-security-number": "Social Security number",
     "sort": "Order",
-    "sort-by-column": "Ordenar por columna",
+    "sort-by-column": "Sort by column",
     "sort-by-date-asc": "Sort by date asc.",
     "sort-by-date-desc": "Sort by date desc.",
     "sort-by-ref-asc": "Sort by reference asc.",
