--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -298,12 +298,12 @@
     "contact-information": "Information de contact",
     "contact-person": "Contact",
     "contacts": "Contacts",
-    "context": "Contexto",
+    "context": "Contexte",
     "continue": "Continuer",
     "contract": "Contrat",
     "contracts": "Contrats",
     "control-panel": "panneau d'administration",
-    "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
+    "control-panel-decimal-warning": "Attention : ce changement s'appliquera aux prix des produits, mais aussi aux totaux des factures, écritures, etc.",
     "controller": "Manette",
     "controller-error": "Erreur de contrôleur",
     "controller-not-found": "Pas trouvé contrôleur",
@@ -317,19 +317,19 @@
     "copy-subaccounts": "Copier le plan comptable",
     "core-update": "Mise à jour du noyau vers la version %version%",
     "core-update-warning": "Advertencias de actualización",
-    "correct": "Correcto",
-    "cost": "Coste",
+    "correct": "Correct",
+    "cost": "Coût",
     "cost-price": "Prix de revient",
     "cost-price-policy": "Politique de prix de revient",
     "counterpart": "Compensation",
     "countries": "Des pays",
     "country": "Pays",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "Le %codiso% n'appartient à aucun pays de l'Union européenne",
     "create": "Créer",
     "create-accounting-entry": "Créer une entrée comptable",
-    "create-delivery-note": "Crear albarán",
+    "create-delivery-note": "Créer un bon de livraison",
     "create-estimation": "Créer un budget",
-    "create-invoice": "Crear factura",
+    "create-invoice": "Créer une facture",
     "create-new-record": "Créer un nouvel enregistrement",
     "created": "Créé",
     "created-default-admin-account": "L'utilisateur %nick% a été créé avec le mot de passe %pass%.",
@@ -340,7 +340,7 @@
     "crons": "Crons",
     "currency": "Devise",
     "currency-position": "Position du symbole de la devise",
-    "current-quarter": "Trimestre actual",
+    "current-quarter": "Trimestre actuel",
     "current-risk": "Risque actuel",
     "customer": "Client",
     "customer-account-not-found": "Le compte client n'a pas été trouvé",
@@ -365,16 +365,16 @@
     "customers": "Les clients",
     "customize": "Personnaliser",
     "daily": "Quotidien",
-    "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
-    "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
-    "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
+    "dasboard-backup-li1": "Si vous supprimez ou désinstallez FacturaScripts, vous perdrez les données.",
+    "dasboard-backup-li2": "Si vous supprimez ou désinstallez XAMPP, vous perdrez les données.",
+    "dasboard-backup-li3": "Si vous perdez, formatez ou détruisez le PC, vous perdrez les données.",
     "dashboard": "Tableau de bord",
-    "dashboard-backup": "Copia de seguridad",
-    "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
+    "dashboard-backup": "Sauvegarde",
+    "dashboard-backup-p": "Nous vous rappelons que FacturaScripts est installé sur votre PC, donc les données (factures, clients, etc.) sont stockées sur votre PC et uniquement sur votre PC. Effectuez des sauvegardes régulières et conservez ces sauvegardes loin du PC.",
     "dashboard-for": "Tableau de bord pour %company%",
     "data-source": "Données d'origine",
     "database": "Base de données",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Erreur de connexion à la base de données",
     "database-name-must-be-lowercase": "Le nom de la base de données doit être en minuscules",
     "date": "Date",
     "date-in": "Date dans",
@@ -386,7 +386,7 @@
     "dateentry-wildcard-info": "Date indiquée dans l'en-tête de l'entrée comptable",
     "day": "jour",
     "days": "Jours",
-    "days-log-retention": "Nº días retención logs",
+    "days-log-retention": "Nombre de jours de conservation des journaux",
     "days-until-expiration": "Jours avant l'échéance",
     "db-host": "Base de données du serveur",
     "db-name": "Nom de la base de données",
@@ -397,7 +397,7 @@
     "db-user": "Base de données de l'utilisateur",
     "debit": "Débit",
     "debug-mode": "Mode débogage",
-    "december": "Diciembre",
+    "december": "Décembre",
     "decimal-separator": "Séparateur décimal",
     "decimals": "Décimales",
     "default": "Par défaut",
@@ -405,7 +405,7 @@
     "default-retention": "Rétention par défaut",
     "default-role": "Groupe d'utilisateurs par défaut",
     "default-tax": "Imposition par défaut",
-    "default-to-company-email": "Por defecto al email de la empresa",
+    "default-to-company-email": "Par défaut à l'adresse e-mail de l'entreprise",
     "default-to-user-email": "Por defecto al email del usuario",
     "default-warehouse": "Entrepôt par défaut",
     "delete": "supprimer",
@@ -474,6 +474,7 @@
     "document-type": "Type de document",
     "document-type-valid-length": "Type de document incorrect Doit être compris entre 1 et 20 caractères.",
     "document-wildcard-info": "Document indiqué dans l'en-tête de l'entrée comptable",
+    "document-without-total": "Documento %document% sin totales o con el total a 0.",
     "documentation": "Documentation",
     "documents": "Documentos",
     "documents-generated": "Documents générés",
