--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -218,38 +218,38 @@
     "center": "Center",
     "change": "cambiamento",
     "channel": "channel",
-    "charge-date": "Fecha cargo",
+    "charge-date": "Data del addebito",
     "chart": "Chart",
-    "charts": "charts",
+    "charts": "grafici",
     "chat": "Chat",
     "check-table": "Il controllo degli errori tabella% 1 $ s",
-    "check-vies": "Comprobar VIES",
-    "checked": "checked",
-    "children": "Niño",
+    "check-vies": "Controlla VIES",
+    "checked": "controllato",
+    "children": "Bambini",
     "children-accounts": "Children Accounts",
     "choose-currency": "Choose currency",
     "choose-doc-type": "Choose document type",
     "choose-employee": "Choose employee",
-    "choose-files": "Seleccionar archivos",
+    "choose-files": "Scegli i file",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Choose serie",
     "choose-source": "Choose source",
     "cifnif": "CIF\/NIF",
     "cities": "Città",
     "city": "Città",
-    "click-link-to-add": "Clicca sul link per aggiungere",
+    "click-link-to-add": "Fare clic sul link per aggiungere",
     "clone": "Clone",
     "clone-account-entry": "Duplicate the accounting entry",
     "close": "vicino",
-    "close-box": "Cerrar caja",
+    "close-box": "Chiudi cassa",
     "close-exercise": "close-exercise",
     "closed": "Closed",
     "closed-exercise": "L'esercizio 0 è chiuso.",
     "closed-exercise-cant-change-date": "L'esercizio 0 è chiuso. Non puoi cambiare la data.",
-    "closing-accounting-completed": "closing-accounting-completed",
+    "closing-accounting-completed": "Chiusura contabile completata",
     "closing-closing-concept": "closing-closing-concept",
     "closing-opening-concept": "closing-opening-concept",
-    "closing-operation": "Cierre",
+    "closing-operation": "Chiusura",
     "closing-regularization-concept": "closing-regularization-concept",
     "codbarras": "Codice a barre",
     "code": "codice",
@@ -474,6 +474,7 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo di documento non valido. Deve essere compreso tra 1 e 20 caratteri.",
     "document-wildcard-info": "Document indicated in the head of the accounting entry",
+    "document-without-total": "Documento %document% sin totales o con el total a 0.",
     "documentation": "documentazione",
     "documents": "Documentos",
     "documents-generated": "documents-generated",
