--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -474,6 +474,7 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento no válido (debe tener entre 1 y 20 carácteres).",
     "document-wildcard-info": "Documento indicado en la cabecera del asiento contable",
+    "document-without-total": "Dokument %document% bez sumy lub suma równa 0.",
     "documentation": "Documentación",
     "documents": "Documentos",
     "documents-generated": "Documentos generados",
@@ -864,8 +865,8 @@
     "ledger": "Diario",
     "left": "Izquierda",
     "level": "Nivel",
-    "level-benefit-sales": "Nivel para ver beneficios",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-benefit-sales": "Poziom do zobaczenia korzyści",
+    "level-cost-sales": "Poziom do zobaczenia kosztów",
     "level1": "Nivel 1",
     "level2": "Nivel 2",
     "level3": "Nivel 3",
@@ -1015,7 +1016,7 @@
     "no-invoice": "Sin factura",
     "no-outstanding-amount": "No hay importe pendiente",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
-    "no-reference": "Sin referencia",
+    "no-reference": "Brak odniesienia",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
     "non-editable-accounting-entry": "Asiento no editable",
@@ -1027,10 +1028,10 @@
     "not-allowed-modify": "No tiene permiso para modificar",
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Zawartość nieprzechowana",
     "not-valid-email": "Email %email% no válido",
     "not-valid-fiscal-number": "El %type% %number% no es válido",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "To nie jest prawidłowy obraz",
     "not-valid-percentage-retention": "Porcentaje no válido. Debe ser mayor de 0.00",
     "note": "Nota",
     "notes": "Notas",
@@ -1040,7 +1041,7 @@
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Número",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Liczba załączników",
     "number-length": "Longitud del número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
