--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -172,15 +172,15 @@
     "cache": "Cache",
     "cache-dir": "Diretório de cache '0'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Diferença encontrada ao calcular o líquido. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferença encontrada ao calcular a sobretaxa de equivalência. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferença encontrada ao calcular o total do IVA. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendário",
     "can-not-open-zip-file": "Não é possível abrir o arquivo zip '0'",
     "cancel": "Cancelar",
     "cancel-data": "Cancelar alterações ou operação",
-    "cancelled": "cancelled",
+    "cancelled": "cancelado",
     "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
     "cant-assign-date-already-regularized": "Você não pode atribuir a data 0 porque já existe uma regularização de 1 para esse período.",
     "cant-assing-subaccount-supplier": "Não é possível associar subconta para provedor 0",
@@ -474,6 +474,7 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
     "document-wildcard-info": "Documento assinalado na cabeceira do registo contábil",
+    "document-without-total": "Documento %document% sin totales o con el total a 0.",
     "documentation": "Documentação",
     "documents": "Documentos",
     "documents-generated": "documents-generated",
