--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -162,9 +162,9 @@
     "block-date": "Block date",
     "blocked": "Bloqueado",
     "blocked-date": "Bloqueado em",
-    "body": "Body",
+    "body": "Corpo",
     "book": "Reserve",
-    "box-closed-ok": "Box closed correctly",
+    "box-closed-ok": "Caixa fechada corretamente",
     "boxes": "Cajas",
     "browse": "Examinar",
     "business-name": "Nome da empresa",
@@ -474,6 +474,7 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
     "document-wildcard-info": "Documento assinalado na cabeceira do registo contábil",
+    "document-without-total": "Documento %document% sin totales o con el total a 0.",
     "documentation": "Documentação",
     "documents": "Documentos",
     "documents-generated": "documents-generated",
