--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -316,18 +316,18 @@
     "copy-p": "Empleni el formulari per a fer una còpia d'aquest model",
     "copy-subaccounts": "Copiar pla de comptes",
     "core-update": "Actualització del nucli a la versió %version%",
-    "core-update-warning": "Advertencias de actualización",
-    "correct": "Correcto",
-    "cost": "Coste",
+    "core-update-warning": "Advertències d'actualització",
+    "correct": "Correcte",
+    "cost": "Cost",
     "cost-price": "Preu de cost",
     "cost-price-policy": "Política de preu de cost",
     "counterpart": "Contrapartida",
     "countries": "Països",
     "country": "País",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "El %codiso% no pertany a cap país de la Unió Europea",
     "create": "Crea",
     "create-accounting-entry": "Crear assentament contable",
-    "create-delivery-note": "Crear albarán",
+    "create-delivery-note": "Crear albarà",
     "create-estimation": "Crear pressupost",
     "create-invoice": "Crear factura",
     "create-new-record": "Crear un nou registre",
@@ -474,6 +474,7 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "El tipo de document no és vàlit. Ha de tindre entre 1 i 20 caràcters.",
     "document-wildcard-info": "Document indicat en la capçalera de l'assentament contable",
+    "document-without-total": "Documento %document% sin totales o con el total a 0.",
     "documentation": "Documentació",
     "documents": "Documentos",
     "documents-generated": "Documents generats",
