--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -449,14 +449,14 @@
     "design": "Diseño",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
-    "details": "Detalles",
+    "details": "Podrobnosti",
     "difference": "Diferencia",
     "different-passwords": "Las contraseñas no coinciden para el usuario %userNick%",
     "different-than": "Diferente que",
     "disable": "Desactivar",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Deaktivovat pluginy",
     "disabled": "Desactivado",
-    "disabled-plugins": "Plugins desactivados",
+    "disabled-plugins": "Deaktivované pluginy",
     "discharge-date": "Fecha de alta: %date%",
     "discount": "Descuento",
     "display": "Visualización",
@@ -474,24 +474,25 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento no válido (debe tener entre 1 y 20 carácteres).",
     "document-wildcard-info": "Documento indicado en la cabecera del asiento contable",
+    "document-without-total": "Dokument %document% bez celkových nákladů nebo s celkovými náklady 0.",
     "documentation": "Documentación",
     "documents": "Documentos",
     "documents-generated": "Documentos generados",
     "domiciled": "Domiciliado",
     "done": "Realizado",
-    "done-date": "Fecha finalización",
+    "done-date": "Datum dokončení",
     "dont-sell-above-pvp": "No vender por encima de PVP",
     "dont-sell-below-cost": "No vender por debajo de coste",
     "download": "Descargar",
     "download-completed": "Descargar completada",
-    "download-error": "Error al descargar. Código %status% - %error%",
-    "download-xml": "Descargar XML",
+    "download-error": "Chyba při stahování. Kód %status% - %error%",
+    "download-xml": "Stáhnout XML",
     "downloads": "Descargas",
     "drag": "Arrastrar",
     "dto": "Dto.",
     "dto-2": "Dto. 2",
     "duplicate-record": "Registro duplicado",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Duplicitní reference '%reference%'",
     "duplicated-request": "Petición duplicada",
     "duration": "Duración",
     "edit": "Editar",
@@ -499,11 +500,11 @@
     "email": "Email",
     "email-bcc": "Email con copia oculta",
     "email-cc": "Email con copia",
-    "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, email.",
+    "email-not-configured": "E-mail není nakonfigurován. E-mail lze nakonfigurovat v administračním menu, e-mail.",
     "email-not-sent": "No enviado",
     "email-notification": "Notificación por email",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
-    "email-notification-not-exists": "Notificación de email %name% no encontrada",
+    "email-notification-disabled": "Notifikace e-mailu %name% je vypnuta",
+    "email-notification-not-exists": "Notifikace e-mailu %name% nebyla nalezena",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "Las respuestas a este email irán a %email%",
     "email-sent": "Email enviado",
@@ -521,7 +522,7 @@
     "enable-api": "Activar API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "Activo",
-    "enabled-plugins": "Plugins activos",
+    "enabled-plugins": "Aktivované pluginy",
     "encrypt": "Encriptación",
     "end-date": "Fecha de fin",
     "end-time": "Hora finalización",
@@ -533,7 +534,7 @@
     "equivalent-account-not-found": "No se ha encontrado la cuenta equivalente a %accountCode% en el ejercicio %exerciseCode% ¿Has importado el plan contable?",
     "equivalent-subaccount-not-found": "No se ha encontrado ninguna subcuenta equivalente a %subAccountCode% para copiar.",
     "error": "ERROR: %error%",
-    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
+    "error-checking-vat-number": "Chyba při kontrole čísla '%vat-number%' v systému VIES",
     "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
     "error-deleting-lines": "Error al eliminar líneas",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
