--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -474,6 +474,7 @@
     "document-type": "Dokumententyp",
     "document-type-valid-length": "Ungültiger Dokumenttyp Muss zwischen 1 und 20 Zeichen lang sein.",
     "document-wildcard-info": "Dokument in der Kopzeile der Buchung",
+    "document-without-total": "Documento %document% sin totales o con el total a 0.",
     "documentation": "Dokumentation",
     "documents": "Documentos",
     "documents-generated": "Dokumente erstellt",
