--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -474,6 +474,7 @@
     "document-type": "Dokumentu mota",
     "document-type-valid-length": "Dokumentu mota baliogabea. 1 eta 20 karaktere artean izan behar du.",
     "document-wildcard-info": "Kontabilitate idazpenaren buruan adierazitako dokumentua",
+    "document-without-total": "Documento %document% sin totales o con el total a 0.",
     "documentation": "Dokumentazioa",
     "documents": "Documentuak",
     "documents-generated": "Dokumentuak sortuta",
