Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -337,7 +337,7 @@
     "credit": "Hartzekoa",
     "crm": "CRM",
     "cron-job": "Zeregin programatua",
-    "crons": "Crons",
+    "crons": "Krons",
     "currency": "Dibisa",
     "currency-position": "Moneta sinboloaren posizioa",
     "current-quarter": "Laukiztako gertakariak",
