--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -264,7 +264,7 @@
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
     "colors": "colors",
-    "column": "Columna",
+    "column": "Colonna",
     "columns": "Columns",
     "combination-code": "Combination code",
     "combinations": "combinazioni",
