--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1076,7 +1076,7 @@
     "origin": "Origen",
     "origin-warehouse": "Almacén de orígen",
     "original": "Original",
-    "original-file": "Fichero original",
+    "original-file": "Plik oryginalny",
     "other-data": "Otros datos",
     "others-filters": "Otros filtros",
     "out-of-stock": "Sin stock",
@@ -1116,7 +1116,7 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% podatku",
     "pct-vat": "% Impuesto",
     "pending": "Pendiente",
     "pending-invoices-button": "Fact. Ptes:",
@@ -1159,7 +1159,7 @@
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "Puntos",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Punkty zainteresowań",
     "port": "Puerto",
     "position": "Cargo",
     "positive-balance": "Saldo positivo",
