--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -553,24 +553,24 @@
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
-    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
+    "es-tax-regime-agrarian": "Zvláštní režim zemědělství, chovu zvířat a rybolovu",
+    "es-tax-regime-cash-criteria": "Hotovostní kritéria",
     "es-tax-regime-especial-agp": "Agricultura, ganadería y pesca",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Régimen general",
-    "es-tax-regime-gold": "Régimen especial del oro de inversión",
-    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
+    "es-tax-regime-gold": "Zvláštní režim investičního zlata",
+    "es-tax-regime-group-entities": "Zvláštní režim skupiny subjektů",
     "es-tax-regime-simplified": "Régimen simplificado",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
-    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
-    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
-    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
+    "es-tax-regime-telecom": "Zvláštní režimy vztahující se na telekomunikační služby, vysílání nebo televizi a služby poskytované elektronickou cestou",
+    "es-tax-regime-travel": "Zvláštní režim cestovních agentur",
+    "es-tax-regime-used-goods": "Zvláštní režim použitých věcí, uměleckých předmětů, starožitností a sběratelských předmětů",
     "estimation": "Presupuesto",
     "estimation-email-subject": "Su presupuesto %code%",
     "estimation-email-text": "Buenos días, le adjunto su presupuesto %code%",
     "estimations": "Presupuestos",
-    "event": "Evento",
-    "events": "Eventos",
+    "event": "Událost",
+    "events": "Události",
     "exceptions": "Excepciones",
     "excess": "En exceso",
     "exclude-invalid": "Excluir inválidos",
