--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1395,8 +1395,8 @@
     "sort-by-date-desc": "Sort by date desc.",
     "sort-by-ref-asc": "Sort by reference asc.",
     "sort-by-ref-desc": "Sort by reference desc.",
-    "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sorted-asc": "Sorted ascending",
+    "sorted-desc": "Sorted descending",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Special account",
@@ -1496,7 +1496,7 @@
     "tax-transport": "Tax transport",
     "taxes": "Taxes",
     "telemetry-data-to-send": "Registered installations periodically notify the version of FacturaScripts, PHP, country, language and list of plugins.",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Telephone prefix",
     "template": "Template",
     "template-error": "Template error",
     "template-not-found": "Template not found",
@@ -1581,7 +1581,7 @@
     "update-time": "Update time",
     "updated-model": "Updated %model% (%key%) %desc%",
     "updater": "Updater",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Updating attached file counters",
     "upload-file": "Upload file",
     "uploaded-at": "Uploaded at",
     "url": "Web site",
