--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -406,17 +406,17 @@
     "default-role": "Groupe d'utilisateurs par défaut",
     "default-tax": "Imposition par défaut",
     "default-to-company-email": "Par défaut à l'adresse e-mail de l'entreprise",
-    "default-to-user-email": "Por defecto al email del usuario",
+    "default-to-user-email": "Par défaut à l'email de l'utilisateur",
     "default-warehouse": "Entrepôt par défaut",
     "delete": "supprimer",
     "delete-all": "Supprimer tout",
     "delete-closing": "Éliminer les entrées de clôture de compte",
     "delete-data": "Suprimmer les données",
     "delete-file": "Supprimer le fichier",
-    "delete-logs": "Eliminar historial",
+    "delete-logs": "Supprimer les journaux",
     "delete-opening": "Supprimer l'entrée d'ouverture de compte",
     "delete-record": "Supprimer l'enregistrement",
-    "Deleted": "Eliminado",
+    "Deleted": "Supprimé",
     "deleted-model": "%model% (%key%) %desc% supprimé",
     "delivery-note": "récépissé",
     "delivery-note-email-subject": "Votre bon de livraison %code%",
