--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -19,7 +19,7 @@
     "account-dot-code": "Punt per a autocompletar zeros. Example: 11.1 = 1100000001",
     "account-length": "Llongitut del conte",
     "account-length-error": "Longitud de subcompte errònia. El subcompte %code% ha de tindre la longitud definida en l'exercici.",
-    "account-missing-in-balance": "El compte %codcuenta% té saldo però no està inclòs als balanços. Considereu incloure-la si el balanç surt desquadrat.",
+    "account-missing-in-balance": "El compte %codcuenta% té saldo però no està inclòs als balanços. Considereu incloure-ho si el balanç surt desquadrat.",
     "account-parent-error": "El conte pare és incorrecte o no pertany a l'eixercici",
     "accounting": "Contabiltat",
     "accounting-accounts": "Contes contables",
