Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -584,7 +584,7 @@
     "exercises": "Ejercicios",
     "exit": "Salir",
     "expedient": "Expediente",
-    "expense-subaccount": "Subcuenta de gastos",
+    "expense-subaccount": "Subúčet nákladů",
     "expenses": "Gastos",
     "expiration": "Vencimiento",
     "expiration-type": "Tipo de vencimiento",
@@ -593,23 +593,23 @@
     "export": "Exportar",
     "export-bill": "Factura de exportación",
     "extra-file": "Archivo extra",
-    "failed": "Fallido",
+    "failed": "Selhalo",
     "families": "Familias",
     "family": "Familia",
     "family-code": "Código de la família",
     "fax": "Fax",
-    "february": "Febrero",
+    "february": "Únor",
     "field-can-not-be-null": "El campo %fieldName% de la tabla %tableName% no puede ser nulo",
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Archivo",
-    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
+    "file-extension-not-accepted": "Chyba při odesílání souboru %fileName% protože jeho přípona není povolena. Povolené přípony jsou: %accepted%",
     "file-name": "Nombre de archivo",
     "file-not-exists": "No existe el archivo: %fileName%",
     "file-not-found": "Archivo %fileName% no encontrado.",
     "file-not-supported": "Archivo no soportado",
-    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
-    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
+    "file-size-error": "Chyba při odesílání souboru %fileName% protože přesahuje maximální povolenou velikost %maxSize% MB",
+    "file-type-error": "Chyba při odesílání souboru typu %typeFile%. Povolené typy jsou: audio, dokument, obrázek a video.",
     "file-yet-exists": "Ya existe el archivo: %filePath%",
     "filecache-clear": "Filecache limpiada.",
     "filecache-delete-key-item": "Eliminado elemento '%item%' de Filecache.",
@@ -621,7 +621,7 @@
     "filters": "Filtros",
     "finalize": "Finalizar",
     "find-problems": "Encontrar problemas",
-    "finished-cron": "Terminada la ejecución del cron. Tiempo consumido: %timeNeeded%",
+    "finished-cron": "Dokončeno spouštění cronu. Časová náročnost: %timeNeeded%",
     "first-quarter": "1º trimestre",
     "first-steps": "Primeros pasos",
     "first-trimester": "Primer trimestre",
@@ -638,7 +638,7 @@
     "footer-text": "Texto pie de página",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "Pro všechny cviky",
     "for-purchase": "Se compra",
     "for-sale": "Se vende",
     "foresee": "Prever",
@@ -661,7 +661,7 @@
     "general-concepts": "Conceptos generales",
     "general-data": "Datos generales",
     "generate": "Generar",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Generovat účetní záznamy",
     "generate-accounting-entry": "Generar asiento contable",
     "generate-doc-type": "Generar tipo de documento",
     "generate-invoice": "Crear factura",
