--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -115,7 +115,7 @@
     "are-you-sure": "Das kann nicht rückgängig gemacht werden. Sind Sie sicher, dass Sie fortfahren möchten?",
     "are-you-sure-action": "Bestätigung nötig. Wollen Sie fortfahren?",
     "asset": "Asset",
-    "assigned": "Asignado",
+    "assigned": "Zugewiesen",
     "attached-file": "Datei hinzufügen",
     "attached-files": "Dateien hinzufügen",
     "attribute": "Attribut",
@@ -131,7 +131,7 @@
     "authentication": "Authentifizierung",
     "auto": "Auto",
     "auto-apply-to": "Automatisch anwenden auf",
-    "automatic": "Automático",
+    "automatic": "Automatisch",
     "available": "Verfügbar",
     "average": "Durchschnitt",
     "average-cost": "Durchschnittskosten",
@@ -151,7 +151,7 @@
     "bank-accounts": "Bankkonten",
     "bank-mandate": "Bankmandat",
     "bank-mandate-date": "Datum Bankmandat",
-    "banking-movements": "Movimientos bancarios",
+    "banking-movements": "Bankbewegungen",
     "barcode": "Strichcode",
     "bcc": "BCC",
     "big": "Groß",
