--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -474,7 +474,7 @@
     "document-type": "Dokumentu mota",
     "document-type-valid-length": "Dokumentu mota baliogabea. 1 eta 20 karaktere artean izan behar du.",
     "document-wildcard-info": "Kontabilitate idazpenaren buruan adierazitako dokumentua",
-    "document-without-total": "Documento %document% sin totales o con el total a 0.",
+    "document-without-total": "Dokumentu %document% gabe totalik edo totala 0 dago.",
     "documentation": "Dokumentazioa",
     "documents": "Documentuak",
     "documents-generated": "Dokumentuak sortuta",
@@ -569,8 +569,8 @@
     "estimation-email-subject": "Zure %code% aurrekontua",
     "estimation-email-text": "Kaixo, zure %code% aurrekontua atxikitzen dizut",
     "estimations": "Aurrekontuak",
-    "event": "Evento",
-    "events": "Eventos",
+    "event": "Gertaera",
+    "events": "Gertaerak",
     "exceptions": "Salbuespenak",
     "excess": "Soberan",
     "exclude-invalid": "Baliogabeak baztertu",
@@ -593,23 +593,23 @@
     "export": "Exportatu",
     "export-bill": "Esportazio faktura",
     "extra-file": "Fitxategi gehigarria",
-    "failed": "Fallido",
+    "failed": "Huts egin",
     "families": "Familiak",
     "family": "Familia",
     "family-code": "Familia kodea",
     "fax": "Faxa",
-    "february": "Febrero",
+    "february": "Otsaila",
     "field-can-not-be-null": "%fieldName% eremua %tableName% taulan ezin da nulua izan",
     "field-required": "Beharrezko eremua: %field%",
     "fields": "Eremuak",
     "file": "Artxiboa",
-    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
+    "file-extension-not-accepted": "Errorea fitxategia bidaltzerakoan %fileName%-en extensioa ez dela onartua. Onartutako extensioak hauek dira: %accepted%",
     "file-name": "Artxiboaren izena",
     "file-not-exists": "%fileName% artxiboa ez da existitzen",
     "file-not-found": "%fileName% artxiboa ez da aurkitu.",
     "file-not-supported": "Artxiboa ez da onartzen",
-    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
-    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
+    "file-size-error": "Errorea fitxategia bidaltzerakoan %fileName% -ek %maxSize% MB baino gehiagoabari duela",
+    "file-type-error": "Errorea fitxategi motako fitxategia bidaltzerakoan. Onartutako motak hauek dira: audio, dokumentua, irudia eta bideoa.",
     "file-yet-exists": "%filePath% artxiboa existitzen da dagoeneko",
     "filecache-clear": "Filecache garbituta.",
     "filecache-delete-key-item": "Filecache-tik '%item%' elementua ezabatu da.",
