--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -449,19 +449,19 @@
     "design": "Diseño",
     "destination-warehouse": "Entrepôt de destination",
     "detail": "Détail",
-    "details": "Detalles",
+    "details": "Détails",
     "difference": "Différence",
     "different-passwords": "Les mots de passe ne correspondent pas %userNick%",
     "different-than": "Différent de",
     "disable": "Désactiver",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Désactiver les plugins",
     "disabled": "désactivé",
-    "disabled-plugins": "Plugins desactivados",
+    "disabled-plugins": "Plugins désactivés",
     "discharge-date": "Date de sortie: %date%",
     "discount": "Remise",
     "display": "Affichage",
     "display-date": "Afficher la date",
-    "do-not-disable-plugins": "No desactivar plugins",
+    "do-not-disable-plugins": "Ne pas désactiver les plugins",
     "do-not-group": "Ne pas regrouper",
     "do-nothing": "Ne fais rien",
     "doc-type": "Type de document",
@@ -474,7 +474,7 @@
     "document-type": "Type de document",
     "document-type-valid-length": "Type de document incorrect Doit être compris entre 1 et 20 caractères.",
     "document-wildcard-info": "Document indiqué dans l'en-tête de l'entrée comptable",
-    "document-without-total": "Documento %document% sin totales o con el total a 0.",
+    "document-without-total": "Document %document% sans totaux ou avec un total de 0.",
     "documentation": "Documentation",
     "documents": "Documentos",
     "documents-generated": "Documents générés",
