--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -255,15 +255,15 @@
     "code": "codice",
     "codiso": "Codice ISO",
     "color": "colore",
-    "color-danger": "Color peligro",
-    "color-dark": "Color oscuridad",
-    "color-info": "Color info",
-    "color-light": "Color luz",
-    "color-primary": "Color primario",
-    "color-secondary": "Color secundario",
-    "color-success": "Color éxito",
-    "color-warning": "Color advertencia",
-    "colors": "colors",
+    "color-danger": "Colore pericolo",
+    "color-dark": "Colore scuro",
+    "color-info": "Colore info",
+    "color-light": "Colore luce",
+    "color-primary": "Colore primario",
+    "color-secondary": "Colore secondario",
+    "color-success": "Colore successo",
+    "color-warning": "Colore avviso",
+    "colors": "colori",
     "column": "Colonna",
     "columns": "Columns",
     "combination-code": "Combination code",
