--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1172,7 +1172,7 @@
     "previous": "Anterior",
     "previous-balance": "Balance anterior",
     "previous-documents": "Documentos previos",
-    "previous-quarter": "Trimestre anterior",
+    "previous-quarter": "Poprzedni kwartał",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Precio",
@@ -1199,7 +1199,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Pérdidas y Ganancias",
     "profit-and-loss-balance": "Balance de Pérdidas y Ganancias",
-    "profits": "Beneficios",
+    "profits": "Zyski",
     "project": "Proyecto",
     "projects": "Proyectos",
     "provider-reference": "Referéncia de proveedor",
