--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -365,16 +365,16 @@
     "customers": "Clients",
     "customize": "Personalitzar",
     "daily": "A diari",
-    "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
-    "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
-    "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
+    "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, perd els dades.",
+    "dasboard-backup-li2": "Si borra o desinstala XAMPP, perd els dades.",
+    "dasboard-backup-li3": "Si perd, formata o destrueix l'PC, perd els dades.",
     "dashboard": "Tauler",
-    "dashboard-backup": "Copia de seguridad",
-    "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
+    "dashboard-backup": "Còpia de seguretat",
+    "dashboard-backup-p": "Li recordem que té instal·lat FacturaScripts en el seu PC, per tant les dades (les factures, clients, etc...) s'emmagatzemen en el seu PC i únicament en el seu PC. Faci còpies de seguretat de forma regular i guarde aquestes còpies lluny de l'PC.",
     "dashboard-for": "Tauler de %company%",
     "data-source": "Senyes d'orige",
     "database": "base de dades",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Error al connectar a la base de dades",
     "database-name-must-be-lowercase": "El nom de la base de senyes deu estar en minúscules",
     "date": "Data",
     "date-in": "Data d'entrada",
@@ -386,7 +386,7 @@
     "dateentry-wildcard-info": "Data indicada en la capçalera de l'assentament contable",
     "day": "day",
     "days": "Dies",
-    "days-log-retention": "Nº días retención logs",
+    "days-log-retention": "Nº dies retenció logs",
     "days-until-expiration": "Dies fins venciment",
     "db-host": "Servidor de la base de senyes",
     "db-name": "Nom de la base de senyes",
